replace mp4 with webm, fix overflow issue

--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,7 @@ body {
   color: #fff;
   background: black;
   font-size: 18px;
+  overflow: hidden;
 }
 
 .container {
@@ -12,6 +13,7 @@ body {
   top: 50%;
   left: 0;
   margin-top: -28.125vw;
+  overflow: hidden;
 }
 
 .video,
